# gettext-rs

./: .cirrus.yml  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  search-index.js
.github/workflows/: freebsd.yml  linux.yml  macos.yml  msys2.yml  rustfmt.yml  windows.yml
ci/: Dockerfile-linux32  Dockerfile-linux32-gettext  Dockerfile-linux64  Dockerfile-linux64-build  Dockerfile-linux64-gettext  Dockerfile-musl  Dockerfile-musl-gettext  local  run.sh
gettext-macros/: Cargo.toml
gettext-macros/src/: arguments.rs  directives.rs  error.rs  helpers.rs  lib.rs
gettext-macros/tests/: dgettext.rs  gettext.rs  integration.rs  ngettext.rs  ui.rs
gettext-macros/tests/helpers/: mod.rs
gettext-macros/tests/ui/: invalid_ref_to_positional_arg.rs  invalid_ref_to_positional_arg.stderr  mismatched_number_of_args.stderr  unmatched.stderr  unmatched_ed.rs  unmatched_ed.stderr  unmatched_op.rs  unmatched_op.stderr
gettext-macros/tests/ui/dgettext/: expected_comma.rs  expected_comma.stderr  expected_comma_and_in_args_too.rs  expected_comma_and_in_args_too.stderr  expected_comma_and_mismatched_number_of_args.rs  expected_comma_and_mismatched_number_of_args.stderr  invalid_ref_to_positional_arg.rs  invalid_ref_to_positional_arg.stderr  mismatched_number_of_args.rs  mismatched_number_of_args.stderr  missing_msgid.rs  missing_msgid.stderr  requires_at_least.rs  requires_at_least.stderr  unmatched.rs  unmatched.stderr
gettext-macros/tests/ui/gettext/: expected_comma.rs  expected_comma.stderr  expected_comma_and_in_args_too.rs  expected_comma_and_in_args_too.stderr  expected_comma_and_mismatched_number_of_args.rs  expected_comma_and_mismatched_number_of_args.stderr  invalid_ref_to_positional_arg.stderr  mismatched_number_of_args.rs  mismatched_number_of_args.stderr  requires_at_least.rs  requires_at_least.stderr  unmatched.rs  unmatched.stderr
gettext-rs/: CHANGELOG.md  Cargo.toml  README.md
gettext-rs/src/: formatter.rs  getters.rs  lc_codes.rs  lib.rs  macros.rs  text_domain.rs
gettext-rs/src/formatter/: mod.rs  tests.rs
gettext-rs/tests/: formatter.rs  getters.rs  integration.rs  macros.rs
gettext-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  gettext-0.21.patch  gettext_exports.rs  lc_codes.rs  lib.rs
gettext_rs/: enum.LocaleCategory.html  fn.bindtextdomain.html  fn.gettext.html  fn.setlocale.html  fn.textdomain.html  index.html  sidebar-items.js
gettext_rs/gettext/: enum.LocaleCategory.html  fn.bindtextdomain.html  fn.gettext.html  fn.setlocale.html  fn.textdomain.html
gettextrs/: enum.LocaleCategory.html  fn.bind_textdomain_codeset.html  fn.bindtextdomain.html  fn.dcgettext.html  fn.dcngettext.html  fn.dgettext.html  fn.dngettext.html  fn.gettext.html  fn.ngettext.html  fn.setlocale.html  fn.textdomain.html  index.html
gettextrs/gettext/: enum.LocaleCategory.html  fn.bind_textdomain_codeset.html  fn.bindtextdomain.html  fn.dcgettext.html  fn.dcngettext.html  fn.dgettext.html  fn.dngettext.html  fn.gettext.html  fn.ngettext.html  fn.setlocale.html  fn.textdomain.html
macros-shared/: Cargo.toml
macros-shared/src/: lib.rs
src/: lib.rs  macros.rs  text_domain.rs
src/gettext_rs/: lib.rs.html
src/gettextrs/: lib.rs.html
systest/: Cargo.toml  build.rs
systest/src/: main.rs
