[package]
name = "gettext-rs"
description = "GNU Gettext FFI binding for Rust"
version = "0.4.4"
authors = ["Konstantin Salikhov <koka58@yandex.ru>"]
repository = "https://github.com/Koka/gettext-rs"
documentation = "http://koka.github.io/gettext-rs/gettextrs/"
homepage = "https://github.com/Koka/gettext-rs"
readme = "README.md"
keywords = ["gettext", "binding", "ffi", "i18n", "l10n"]
license = "MIT"

exclude = [
    "systest/*",
    "ci/*",
    "gettext-sys/*",
]

[lib]
name = "gettextrs"

[features]
gettext-system = ["gettext-sys/gettext-system"]

[dependencies.gettext-sys]
version = "0.19.9"
path = "gettext-sys"

[dependencies]
locale_config = "0.2"

[workspace]
members = ["systest"]
