[package]
name = "gettext-macros"
description = "Macros to allow instant formatting of gettext messages"
version = "0.1.0"
authors = ["Maksym Hazevych <dpadar@protonmail.com>"]
repository = "https://github.com/Koka/gettext-rs"
documentation = "https://docs.rs/gettext-rs/"
homepage = "https://github.com/Koka/gettext-rs"
license = "MIT OR Unlicense"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]
gettext-rs = { path = "../gettext-rs" }
lazy_static = "1"
