[package]
name = "gettext-rs"
description = "Safe bindings for gettext"
version = "0.7.0"
authors = ["Konstantin Salikhov <koka58@yandex.ru>", "Alexander Batischev <eual.jp@gmail.com>"]
repository = "https://github.com/Koka/gettext-rs"
documentation = "https://docs.rs/gettext-rs/"
homepage = "https://github.com/Koka/gettext-rs"
readme = "README.md"
keywords = ["gettext", "binding", "ffi", "i18n", "l10n"]
license = "MIT"
edition = "2015"

[lib]
name = "gettextrs"

[features]
default = ["macros"]
gettext-system = ["gettext-sys/gettext-system"]
macros = ["gettext-macros"]

[dependencies.gettext-sys]
version = "0.21.0"
path = "../gettext-sys"

[dependencies.gettext-macros]
version = "0.1.0"
path = "../gettext-macros"
optional = true

[dependencies]
locale_config = "0.3"

[dev-dependencies]
lazy_static = "1"
