[package]
name = "gettext-sys"
description = "Gettext raw FFI bindings"
license = "MIT"
version = "0.21.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
build = "build.rs"
links = "gettext"
readme = "README.md"

[lib]
path = "lib.rs"

[features]
gettext-system = []

[build-dependencies]
cc = "1.0"
