[package]
name = "gettext-sys"
description = "Raw FFI bindings for gettext"
license = "MIT"
version = "0.21.1"
authors = ["Brian Olsen <brian@maven-group.org>"]
build = "build.rs"
links = "gettext"
readme = "README.md"
documentation = "https://docs.rs/gettext-sys/"
homepage = "https://github.com/Koka/gettext-rs"
repository = "https://github.com/Koka/gettext-rs"
edition = "2015"
keywords = ["gettext", "binding", "ffi", "i18n", "l10n"]

[lib]
path = "lib.rs"

[features]
gettext-system = []

[build-dependencies]
cc = "1.0"
temp-dir = "0.1.11"
